# edgeclaw

./: .dev.vars.example  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  EDGECLAW_SPEC.md  README.md  docker-compose.yml  package-lock.json  package.json  wrangler.toml
.github/workflows/: ci.yml  deploy.yml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  error.rs  lib.rs  llm.rs  types.rs
crates/edgeclaw-server/: Cargo.toml
crates/edgeclaw-server/migrations/: 0001_initial.sql  0003_skill_context.sql  0004_skill_auth_headers.sql
crates/edgeclaw-server/src/: agent.rs  handlers.rs  main.rs  server.rs
crates/edgeclaw-server/tests/: integration.rs
crates/edgeclaw-worker/: Cargo.toml
crates/edgeclaw-worker/src/: lib.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: client.rs  lib.rs  protocol.rs
crates/skill-registry/: Cargo.toml
crates/skill-registry/src/: lib.rs
deploy/: Caddyfile
skills/mcp-server-util/: Cargo.toml
skills/mcp-server-util/src/: lib.rs
skills/skill-github/: SKILL.md
skills/skill-gmail/: SKILL.md
skills/skill-google-calendar/: SKILL.md
skills/skill-http-fetch/: Cargo.toml  wrangler.toml
skills/skill-http-fetch/src/: lib.rs
skills/skill-memory/: Cargo.toml  wrangler.toml
skills/skill-memory/src/: lib.rs
skills/skill-web-search/: Cargo.toml  wrangler.toml
skills/skill-web-search/src/: lib.rs
tests/fixtures/: api_error_response.json  end_turn_response.json  tool_use_response.json
tests/integration/: agent.test.ts
