[package]
name = "skill-web-search"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-server-util = { path = "../mcp-server-util" }
worker = { version = "0.7", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

[lib]
crate-type = ["cdylib"]
